force-app/main/default/objects/ProdutoResgate__c/ProdutoResgate__c.object-meta.xml
<CustomObject>
    <description>Catalogo de produtos que o cliente pode resgatar trocando pontos.</description>
    <label>Produto para Resgate</label>
    <nameField>
        <label>Nome do Produto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos para Resgate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>