force-app/main/default/objects/ProdutoResgate__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alimentos</fullName>
                <default>true</default>
                <label>Alimentos</label>
            </value>
            <value>
                <fullName>Bebidas</fullName>
            </value>
            <value>
                <fullName>Limpeza</fullName>
            </value>
            <value>
                <fullName>Higiene</fullName>
                <label>Higiene e Cuidados Pessoais</label>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>