force-app/main/default/objects/ProdutoResgate__c/fields/Custo_Pontos__c.field-meta.xml
<CustomField>
    <fullName>Custo_Pontos__c</fullName>
    <label>Custo em Pontos</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>