force-app/main/default/objects/ProdutoResgate__c/fields/Estoque__c.field-meta.xml
<CustomField>
    <fullName>Estoque__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estoque Disponivel</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>