force-app/main/default/objects/ProdutoResgate__c/fields/Imagem_URL__c.field-meta.xml
<CustomField>
    <fullName>Imagem_URL__c</fullName>
    <description>URL publica da imagem do produto, exibida no catalogo de resgate.</description>
    <label>URL da Imagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>